--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -142,18 +142,17 @@
     <h1>Sexual Profiles</h1>
   </div>
   <div class="title-line"></div>
-
-  <div class="section container">
+    <div class="section container">
     <!-- Tender Protector -->
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/tender-protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
+          <a href="profiles/tender_protector.html"><img src="images/tender_protector_female.jpg" alt="Tender Protector - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/tender-protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
+          <a href="profiles/tender_protector.html"><img src="images/tender_protector_male.jpg" alt="Tender Protector - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/tender-protector.html">Tender Protector</a></h3>
+      <h3><a href="profiles/tender_protector.html">Tender Protector</a></h3>
       <p class="slogan">You lead with gravity, not volume.</p>
     </div>
 
@@ -161,12 +160,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/devoted-darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
+          <a href="profiles/devoted_darling.html"><img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/devoted-darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
+          <a href="profiles/devoted_darling.html"><img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/devoted-darling.html">Devoted Darling</a></h3>
+      <h3><a href="profiles/devoted_darling.html">Devoted Darling</a></h3>
       <p class="slogan">Nothing is as kinky as loyalty.</p>
     </div>
 
@@ -187,12 +186,12 @@
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
-          <a href="profiles/mood-multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
+          <a href="profiles/mood_multiplier.html"><img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female"></a>
           <div class="divider"></div>
-          <a href="profiles/mood-multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
+          <a href="profiles/mood_multiplier.html"><img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male"></a>
         </div>
       </div>
-      <h3><a href="profiles/mood-multiplier.html">Mood Multiplier</a></h3>
+      <h3><a href="profiles/mood_multiplier.html">Mood Multiplier</a></h3>
       <p class="slogan">You match their vibe—and raise it.</p>
     </div>
 
@@ -206,12 +205,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/generous-giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
+            <a href="profiles/generous_giver.html"><img src="images/generous_giver_female.jpg" alt="Generous Giver - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/generous-giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
+            <a href="profiles/generous_giver.html"><img src="images/generous_giver_male.jpg" alt="Generous Giver - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/generous-giver.html">Generous Giver</a></h3>
+        <h3><a href="profiles/generous_giver.html">Generous Giver</a></h3>
         <p class="slogan">You have so much to give, you just need someone to give it to.</p>
       </div>
 
@@ -219,12 +218,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/promiscuous-plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
+            <a href="profiles/promiscuous_plaything.html"><img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/promiscuous-plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
+            <a href="profiles/promiscuous_plaything.html"><img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+        <h3><a href="profiles/promiscuous_plaything.html">Promiscuous Plaything</a></h3>
         <p class="slogan">Are you ready for a wild ride!</p>
       </div>
 
@@ -232,12 +231,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/bedroom-adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
+            <a href="profiles/bedroom_adventurer.html"><img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/bedroom-adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
+            <a href="profiles/bedroom_adventurer.html"><img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+        <h3><a href="profiles/bedroom_adventurer.html">Bedroom Adventurer</a></h3>
         <p class="slogan">I'm up for anything and down to get down and dirty.</p>
       </div>
 
@@ -245,12 +244,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/charmer-in-charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
+            <a href="profiles/charmer_in_charge.html"><img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/charmer-in-charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
+            <a href="profiles/charmer_in_charge.html"><img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/charmer-in-charge.html">Charmer in Charge</a></h3>
+        <h3><a href="profiles/charmer_in_charge.html">Charmer in Charge</a></h3>
         <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
 
@@ -265,12 +264,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/claimed-and-trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
+            <a href="profiles/claimed_and_trained.html"><img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/claimed-and-trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
+            <a href="profiles/claimed_and_trained.html"><img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/claimed-and-trained.html">Claimed & Trained</a></h3>
+        <h3><a href="profiles/claimed_and_trained.html">Claimed & Trained</a></h3>
         <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
       </div>
 
@@ -278,12 +277,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/the-punish-me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
+            <a href="profiles/the_punish_me.html"><img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/the-punish-me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
+            <a href="profiles/the_punish_me.html"><img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/the-punish-me.html">The Punish Me</a></h3>
+        <h3><a href="profiles/the_punish_me.html">The Punish Me</a></h3>
         <p class="slogan">What you call defiance, I call foreplay.</p>
       </div>
 
@@ -291,12 +290,12 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/the-provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
+            <a href="profiles/the_provoker.html"><img src="images/the_provoker_female.jpg" alt="The Provoker - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/the-provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
+            <a href="profiles/the_provoker.html"><img src="images/the_provoker_male.jpg" alt="The Provoker - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/the-provoker.html">The Provoker</a></h3>
+        <h3><a href="profiles/the_provoker.html">The Provoker</a></h3>
         <p class="slogan">You press buttons—on purpose.</p>
       </div>
 
@@ -304,15 +303,17 @@
       <div class="archetype-card">
         <div class="image-container">
           <div class="image-pair">
-            <a href="profiles/dungeon-master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
+            <a href="profiles/dungeon_master.html"><img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female"></a>
             <div class="divider"></div>
-            <a href="profiles/dungeon-master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
+            <a href="profiles/dungeon_master.html"><img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male"></a>
           </div>
         </div>
-        <h3><a href="profiles/dungeon-master.html">Dungeon Master</a></h3>
+        <h3><a href="profiles/dungeon_master.html">Dungeon Master</a></h3>
         <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
       </div>
 
       <a href="index.html" class="find-type-button">Find Your Type</a>
     </div>
   </div>
+  </body>
+</html>
