--- a/profiles/heatwave.html
+++ b/profiles/heatwave.html
@@ -43,76 +43,132 @@
       width: 100%;
       max-width: 700px;
       margin: 0 auto 20px;
+    }<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Heatwave</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
 
-    .image-container img {
-      width: 50%;
-      height: auto;
+    body {
+      background-color: #064D95;
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      text-align: center;
+      padding: 20px;
+      text-shadow: 0 0 5px #57b9ff, 0 0 10px #57b9ff;
+    }
+
+    .logo {
+      max-width: 120px;
+      margin: 20px auto 10px;
       display: block;
-      object-fit: contain;
-      -webkit-user-drag: none;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .slogan {
+      font-style: italic;
+      font-size: 1.2rem;
+      margin-bottom: 30px;
+    }
+
+    .image-container {
+      border: 4px solid gold;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+
+    .image-half {
+      flex: 1;
+    }
+
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       pointer-events: none;
+      user-select: none;
     }
 
     .divider {
       width: 4px;
       background-color: gold;
-      height: 100%;
     }
 
     .quote {
       font-style: italic;
-      font-size: 1rem;
-      margin: 20px auto 10px;
+      margin: 25px auto 10px;
       max-width: 600px;
+      font-size: 1rem;
     }
 
     .description {
-      font-size: 1.05rem;
-      line-height: 1.6;
       max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .view-all-button {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 12px 28px;
-      border: 2px solid white;
-      color: white;
-      background-color: transparent;
-      font-style: italic;
+      margin: 20px auto;
+      line-height: 1.6;
       font-size: 1rem;
-      text-decoration: none;
-      border-radius: 25px;
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    .view-all-button:hover {
-      background-color: white;
-      color: #064D95;
     }
   </style>
 </head>
 <body>
-  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
-  <h1 class="archetype-title">Heatwave</h1>
-  <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+
+  <h1>Heatwave</h1>
+  <div class="slogan">There's no need to change who you are, because people will adjust to you.</div>
 
   <div class="image-container">
-    <img src="/images/heatwave_female.JPG" alt="Heatwave - Female">
+    <div class="image-half">
+      <img src="/images/heatwave_female.JPG" alt="Heatwave - Female">
+    </div>
     <div class="divider"></div>
-    <img src="/images/heatwave_male.JPG" alt="Heatwave - Male">
+    <div class="image-half">
+      <img src="/images/heatwave_male.JPG" alt="Heatwave - Male">
+    </div>
   </div>
 
-  <p class="quote">"I don’t just bring the heat. I *am* the temperature."</p>
+  <div class="quote">"I don’t just bring the heat. I *am* the temperature."</div>
 
-  <p class="description">
-    Some people adapt to their surroundings. You make your surroundings adapt to you. The Heatwave archetype exudes sensual intensity without needing to say a word.
-    You magnetize others with your raw authenticity—unapologetically yourself, no edits or disclaimers. Your energy burns through small talk, leaving only the realest
-    desires exposed. Others might try to play it cool, but they’re already sweating. You don’t chase—because everyone’s already chasing you.
-  </p>
+  <div class="description">
+    Some people adapt to their surroundings. You make your surroundings adapt to you.
+    The Heatwave archetype exudes sensual intensity without needing to say a word.
+    You magnetize others with your raw authenticity—unapologetically yourself, no edits or disclaimers.
+    Your energy burns through small talk, leaving only the realest desires exposed.
+    Others might try to play it cool, but they’re already sweating.
+    You don’t chase—because everyone’s already chasing you.
+  </div>
 
-  <a href="/archetype-gallery.html" class="view-all-button">View All Sexual Profiles</a>
+  <a href="/archetype-gallery.html" style="
+    display: inline-block;
+    margin-top: 30px;
+    padding: 12px 28px;
+    border: 2px solid white;
+    color: white;
+    background-color: transparent;
+    font-style: italic;
+    font-size: 1rem;
+    text-decoration: none;
+    border-radius: 25px;
+    transition: background-color 0.3s, color 0.3s;
+  ">
+    View All Sexual Profiles
+  </a>
 </body>
 </html>
